# Wasm-Playground

./: .gitignore  .ignore  Cargo.toml  README.md  RUSTFLAGS="-C link-arg=--export-table" cargo b --target=wasm32-unknown-unknown --release.wat  regenerate_wasm.sh
.cargo/: config.toml
src/: importwasm.rs  lib.rs
wat/: 'RUSTFLAGS="-C link-arg=--export-table" cargo b --target=wasm32-wasi'  'RUSTFLAGS="-C link-arg=--export-table" cargo b --target=wasm32-wasi.wat  RUSTFLAGS="-C link-arg=--export-table" cargo b --target=wasm32-unknown-unknown --release.wat  cargo b --target=wasm32-wasi --profile small.wat  cargo build --target=wasm32-unknown-unknown --profile small.wat
