[package]
name = "wasm_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]

[features]
small = []

[profile.dev]
opt-level = 'z'
# panic = "abort"
lto = true

[profile.release]
opt-level = 'z'
panic = "abort"
strip = true
lto = true