[package]
name = "wasm_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
crate-type = ["cdylib"]

[features]
small = []

# Comment me for bigger binary size
[profile.dev]
opt-level = 'z'
lto = true

# Comment me for bigger binary size
[profile.release]
opt-level = 'z'
panic = "abort"
strip = true
lto = true