[package]
name = "wasm_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
small = []

# Note: this is to help with readbility of wat files
[profile.dev]
opt-level =  'z'
lto = true
debug = true
strip = false

# small binary size 
#
# ```sh`
# cargo b --target=wasm32-wasi --profile small
# ````
[profile.small]
inherits = "release"
opt-level = 'z' # or 's'
panic = "abort"
strip = true
lto = true

